2007-10-24  Milan Crha <mcrha@redhat.com>

	** Fix for bug #467364 by Christian Kintner

	* evolution-mail.schemas.in: 
	* mail-config.glade: Evolution uses "Emoticon" instead of "Smiley".

2007-10-24  Andre Klapper <a9016009@gmx.de>

	** Fix for bug #261165

	* filtertypes.xml: added search on CC and BCC

2007-10-23  Milan Crha  <mcrha@redhat.com>

	** Fix for bug #271734

	* mail-mt.c: (do_op_status): Show description of operation, if
	available, instead of empty string and end activity properly, if
	operation ended before/during activity start. 

2007-10-15  Matthew Barnes  <mbarnes@redhat.com>

	* em-folder-view.c:
	Fix broken icon for View -> Zoom -> Normal Size.

2007-10-12  Michael Monreal <michael.monreal@gmail.com>

	** New inbox/outbox/sent icons (bug #479257)

	* mail/em-folder-tree.c, mail/mail-send-recv.c:
	Change icon references.

2007-10-11  Matthew Barnes  <mbarnes@redhat.com>

	* em-format.c (em_format_add_puri):
	Use G_GSIZE_FORMAT when printing a gsize/size_t to make compilers
	on all arches happy.

2007-10-11  Milan Crha  <mcrha@redhat.com>

	** Fix for bug #323977

	* em-filter-rule.c: (get_widget):
	Use "Add Action" instead of plain "Add" for button label.

2007-10-11  Milan Crha  <mcrha@redhat.com>

	** Fix for bug #329823

	* mail-component.h: (mail_indicate_new_mail):
	* mail-component.c: (mail_indicate_new_mail),
	(struct _MailComponentPrivate), (impl_dispose), (impl_createView):
	New function to indicate new mails on sidebar's button and storing
	component_view in priv struct for later use.
	* em-folder-view.c: (emfv_list_done_message_selected):
	* mail-folder-cache.c: (real_flush_updates):
	Indicate changes like for plugins for new mails.

2007-10-09  Matthew Barnes  <mbarnes@redhat.com>

	** Fixes part of bug #437579

	* e-searching-tokenizer.c:
	* em-folder-browser.c:
	* em-format-html.c:
	* em-format-view.c:
	* em-format.c:
	* em-mailer-prefs.c:
	* em-mailer-prefs.h:
	* mail-session.c:
	* mail-session.h:
	* mail-vfolder.c: